<resources>
    <string name="app_name">ToothNow</string>
    <string name="label_Login">Entrar</string>
    <string name="label_Register">Registre-se</string>
    <string name="lable_Email">Email</string>
    <string name="label_Password">Senha</string>
    <string name="label_Welcome">Bem Vindo</string>
    <string name="label_WelcomeDescription">Entrar com sua conta</string>
    <string name="label_RegisterTitle">Registro</string>
    <string name="label_PersonalInfo">Informações Pessoais:</string>
    <string name="label_NameRegister">Nome</string>
    <string name="label_PhoneNumber">Telefone</string>
    <string name="label_EmailRegister">Email</string>
    <string name="label_PasswordRegister">Senha</string>
    <string name="label_AdrTitle">Endereço de Atendimento</string>
    <string name="label_Adr1">Endereço 1</string>
    <string name="label_ShortResume">Breve Currículo</string>
    <string name="label_ProfessionalExperience">Experiência Profissional</string>
    <string name="label_RegisterBtn">Registrar</string>
    <string name="label_ForgotBtn">Esqueci minha senha</string>
    <string name="label_Singup">Cadastro</string>
    <string name="label_Signup2">Cadastrar</string>
    <string name="action_settings">Settings</string>

    //strings para navegacao
    <string name="info_fragment_label">Info</string>
    <string name="login_fragment_label">Login</string>
    <string name="signup_fragment_label">Sign Up</string>
    <string name="notifications_are_disabled_fragment_label">Notificações desabilitadas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>